--- a/shop/templates/shop/shopmanager/login.html
+++ b/shop/templates/shop/shopmanager/login.html
@@ -21,7 +21,7 @@
             <label for="">Username:</label>
             <input type="text" placeholder="Enter username" name="username">
             <label for="">Password:</label>
-            <input type="text" placeholder="Enter password" name="password">
+            <input type="password" placeholder="Enter password" name="password">
             <button type="submit">Login</button>
 
         </form>
