--- a/shop/static/shop/css/main.css
+++ b/shop/static/shop/css/main.css
@@ -651,9 +651,7 @@ input[type=number] {
     color: var(--green);
 
 }
-.toggle-content.main-toggle img {
-    width: 100%;
-}
+
 .toggle-content ul {
     padding: 0px 15px;
 }
@@ -662,6 +660,9 @@ input[type=number] {
 }
 .toggle-content img {
     max-width: 100%;
+    max-height: 100%;
+    width: auto!important;
+    height: auto!important;
 }
 /* slider */
 .slider-wrapper {
