--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <div class="content-container product-page">
-<a href="tel:071321312" class="phone-sticky mobile"><span>ЈАВИ СЕ И НАРАЧАЈ <img src="{% static 'icons/phone.svg' %}" alt="" class="image-icon top-icon filter-white" width="16" height="16"></span></a>
+<a href="tel:071321312" class="phone-sticky mobile"><span>ЈАВИ СЕ И НАРАЧАЈ <img src="{% static 'icons/phone.svg' %}" alt="" class="image-icon top-icon filter-white" width="16" height="16" style="-webkit-transform: scaleX(-1);transform: scaleX(-1);"></span></a>
 <div class="col-1 product-page">
     <div class="slider-holder">
         
