--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -56,6 +56,7 @@
             
             <div class="attribute-item">
                 <input type="hidden" class="attrib_id" name="atribute_id" value="{{ attribute.id }}">
+                <input type="hidden" class="attrib_price" name="atribute_price" value="{{ attribute.price }}">
                 <div class="attribute-inner" style="background-color:{{ attribute.color.color_code }}"></div>
             </div>
             {% endfor %}
@@ -65,6 +66,7 @@
             {% for attribute in attributes %}
             <div class="attribute-item">
                 <input type="hidden" class="attrib_id" name="atribute_id" value="{{ attribute.id }}">
+                <input type="hidden" class="attrib_price" name="atribute_price" value="{{ attribute.price }}">
                 <div class="attribute-inner size">{{ attribute.size.title }}</div>
             </div>
             {% endfor %}
