--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -5,8 +5,8 @@
     <div class="banner-inner-header">
         <a href="tel:071321312" class="banner-text">071321312 (09:00 - 00:00)</a>
         <a href="mailto:contact@greengoshop.mk" class="banner-text">contact@greengoshop.mk</a>
-        <a href="https://www.facebook.com/greengoshop.mk"><img src="{% static 'icons/facebook.svg' %}"  class="image-icon filter-white"  alt="" width="16" height="16"></a>
-        <a href="https://www.instagram.com/greengoshop.mk"><img src="{% static 'icons/instagram.svg' %}" class="image-icon filter-white" alt="" width="16" height="16"></a>
+        <a href="https://www.facebook.com/greengoshop.mk" aria-label="Facebook"><img src="{% static 'icons/facebook.svg' %}"  class="image-icon filter-white"  alt="" width="16" height="16"></a>
+        <a href="https://www.instagram.com/greengoshop.mk" aria-label="Instagram"><img src="{% static 'icons/instagram.svg' %}" class="image-icon filter-white" alt="" width="16" height="16"></a>
         </div>
         
 </section>
@@ -14,14 +14,14 @@
     <div class="inner-header">
 
         <div class="header-logo-container">
-        <a href="{% url 'shop-home' %}" class="header-logo-link">
+        <a href="{% url 'shop-home' %}" class="header-logo-link" aria-label="Почетна">
             <img src="{% static 'icons/header-logo.webp' %}" alt="default.jpg" class="header-logo-img" width="280" height="80" >
         </a>
         </div>
 
         <div class="header-search">
-            <form action="{% url 'search_results' %}" method="get">
-            <input type="text" name="q" id="Search_Bar" placeholder="Пребарај ги сите производи">
+            <form action="{% url 'search_results' %}" method="get" aria-label="Пребарај производи">
+            <input type="text" name="q" id="Search_Bar" placeholder="Пребарај ги сите производи" aria-label="Копче за пребарување">
             <button class="search_button">
             <img src="{% static 'icons/magnifying-glass.svg' %}" alt="" class="image-icon desktop filter-white" width="16" height="16">
             </button>
@@ -52,7 +52,7 @@
         
         {% for item in cart %}
        
-        <a href="{% url 'product-page' item.product.slug %}" target="_blank" class="sidecart-item basic-sidecart-item  product_data" style="padding: 20px 0px; margin:0px 20px;">
+        <a href="{% url 'product-page' item.product.slug %}" target="_blank" class="sidecart-item basic-sidecart-item  product_data" style="padding: 20px 0px; margin:0px 20px;" aria-label="Продукт во кошничка">
             <input type="hidden" class="prod_id" value="{{ item.product.id }}">
             <input type="hidden" class="attrib_id" name="atribute_id" value="{{ item.attribute.id }}">
             <img src="{{ item.product.thumbnail_loop.url }}" alt="" width="70" height="70" class="cart-item-thumbnail">
@@ -77,7 +77,7 @@
             <p class="cart-offers-text">Може да ви се допадне</p>
             {% for item in cartOffers %}
             
-            <a href="{% url 'product-page' item.product.slug %}" target="_blank" class="sidecart-item sidecart-offer-item  product_data">
+            <a href="{% url 'product-page' item.product.slug %}" target="_blank" class="sidecart-item sidecart-offer-item  product_data" aria-label="Понуди за кошничка">
                 <input type="hidden" class="prod_id" value="{{ item.product.id }}">
                 <img src="{{ item.product.thumbnail_loop.url }}" alt="" width="60" height="60" class="cart-item-thumbnail">
                 <span class="sidecart-item-content sidecart-offer-content">
@@ -116,7 +116,7 @@
             <p class="cart-offers-text">Може да ви се допадне</p>
             {% for item in cartOffers %}
             
-            <a href="{% url 'product-page' item.product.slug %}" target="_blank" class="sidecart-item sidecart-offer-item  product_data">
+            <a href="{% url 'product-page' item.product.slug %}" target="_blank" class="sidecart-item sidecart-offer-item  product_data" aria-label="Кошничка понуди 2">
                 <input type="hidden" class="prod_id" value="{{ item.product.id }}">
                 <img src="{{ item.product.thumbnail_loop.url }}" alt="" width="60" height="60" class="cart-item-thumbnail">
                 <span class="sidecart-item-content sidecart-offer-content">
