--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -19,8 +19,8 @@
         </div>
         <div class="footer-item ">
             <h3>Контакт</h3>
-            <a href="tel:071321312"><img src="{% static 'icons/phone.svg' %}" alt="" class="image-icon top-icon filter-white" width="16" height="16">+389 71321312 (09:00 – 17:00)</a>
-            <a href="mailto:contact@greengoshop.mk"><img src="{% static 'icons/envelope.svg' %}" alt="" class="image-icon top-icon filter-white" width="16" height="16">contact@greengoshop.mk</a>
+            <a href="tel:071321312" aria-label="Контакт телефон"><img src="{% static 'icons/phone.svg' %}" alt="" class="image-icon top-icon filter-white" width="16" height="16">+389 71321312 (09:00 – 17:00)</a>
+            <a href="mailto:contact@greengoshop.mk" aria-label="Контакт mail"><img src="{% static 'icons/envelope.svg' %}" alt="" class="image-icon top-icon filter-white" width="16" height="16">contact@greengoshop.mk</a>
         </div>
         <div class="footer-item">
             <h3>Полиси</h3>
@@ -28,14 +28,13 @@
             <a href="{% url 'reklamacija-page' %}">Рекламација</a>
         </div>
         <div class="footer-item">
-            <h3>Полиси</h3>
             <a href="{% url 'rights-of-usage-page' %}">Правила на користење</a>
             <a href="{% url 'cookies-page' %}">Политика за приватност и колачиња</a>
         </div>
     <hr class="horizontal-line">
     <div class="footer-social-icons">
-        <a href="https://www.facebook.com/greengoshop.mk"><img src="{% static 'icons/facebook.svg' %}" alt="" class="image-icon filter-white" width="24" height="24"></a>
-        <a href="https://www.instagram.com/greengoshop.mk/"><img src="{% static 'icons/instagram.svg' %}" alt="" class="image-icon filter-white" width="24" height="24"></a>
+        <a href="https://www.facebook.com/greengoshop.mk" aria-label="Facebook"><img src="{% static 'icons/facebook.svg' %}" alt="" class="image-icon filter-white" width="24" height="24"></a>
+        <a href="https://www.instagram.com/greengoshop.mk/" aria-label="Instagram"><img src="{% static 'icons/instagram.svg' %}" alt="" class="image-icon filter-white" width="24" height="24"></a>
     </div> 
 </div>
 </footer>
