--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -64,7 +64,11 @@
                 <p class="sidecart-item-name">{{ item.product.title }}</p>
                 <p class="sidecart-item-quantity">{{ item.product_qty }} x <span class="green">{{ item.product.sale_price }} ден</span></p>
                 {% endif %}
-                
+                <div class="quantity sidecart-qty-box">
+                    <button class="changeQuantity decrement-btn sidecart-qty">-</button>
+                    <input type="text" name="quantity" class="qty-input" value="{{ item.product_qty }}">
+                    <button class="changeQuantity increment-btn sidecart-qty">+</button>         
+                </div>
             </span>
             <span class="sidecart-remove-item remove-item">&#10006;</span>
         </a>
