--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -95,9 +95,9 @@
                     
                 </span>
                 {% if item.is_added == True %}
-                    <button class="add-to-cartBtn sidecartOfferBtn addedBtn">ДОДАДЕН</button>
+                    <button class="sidecartOfferBtn addedBtn">ДОДАДЕН</button>
                 {% else %}
-                    <button class="add-to-cartBtn sidecartOfferBtn">ДОДАДИ</button>
+                    <button class="sidecartOfferBtn">ДОДАДИ</button>
                 {% endif %}
                 
                 
@@ -135,9 +135,9 @@
                     
                 </span>
                 {% if item.is_added == True %}
-                    <button class="add-to-cartBtn sidecartOfferBtn addedBtn">ДОДАДЕН</button>
+                    <button class="sidecartOfferBtn addedBtn">ДОДАДЕН</button>
                 {% else %}
-                    <button class="add-to-cartBtn sidecartOfferBtn">ДОДАДИ</button>
+                    <button class="sidecartOfferBtn">ДОДАДИ</button>
                 {% endif %}
                 
                 
