--- a/shop/static/shop/css/main.css
+++ b/shop/static/shop/css/main.css
@@ -458,6 +458,7 @@ input[type=number] {
     border: 0!important;
     color: white!important;
     font-weight: 600!important;
+    border-radius: 30px;
 }
 .red{
     color: var(--red);
