--- a/shop/templates/shop/shopmanager/dashboard.html
+++ b/shop/templates/shop/shopmanager/dashboard.html
@@ -74,7 +74,7 @@
                         <button class="table-button return-orderBtn">Врати</button>
                         {% endif %}
                     </td>
-                    <td>
+                    <td style="width:20%;">
                         {% if order.message %}
                         <p class="table-content"><span class="table-strong">Коментар од муштерија:</span>{{order.message}}</p>
                         {% else %}
