--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -490,6 +490,6 @@
 
 {% endblock content %}
 {% block scripts %}
-<script src="{%  static 'shop/js/checkout.js' %}"></script>
+<script src="{%  static 'shop/js/checkout_minified.js' %}"></script>
 {% endblock scripts %}
  
