--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -170,7 +170,7 @@
 {% endif %}
 
     
-    <section class="slider-wrapper slider-wrapper1">
+    <section class="slider-wrapper slider-wrapper1" style="display:none">
         <h3 class="slide-title">ПОСЛЕДНИ КОЛИЧИНИ</h3>
         <button class="slide-arrow slide-arrow-prev slide-arrow-prev1">&#8249;</button>
         <button class="slide-arrow slide-arrow-next slide-arrow-next1">&#8250;</button>
