--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -147,7 +147,7 @@
     outline:none;
   }
   .dropdown-select .dd-searchbox:focus{
-    border-color: #b8eb00;
+    border-color: #b8eb00!important;
   }
   
   .dropdown-select .list ul {
