--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -8,16 +8,26 @@
     <meta name="description" content="GreenGoShop - Macedonia">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <meta name="facebook-domain-verification" content="h2usro5nxhvyib48mq1rehoul0nf1o" />
+    
+    <meta property="og:type" content="Website">
+    <meta property="og:site_name" content="GreenGoShop Macedonia">
+    
     {% if title %}
         <title>{{ title }} - GreenGoShop</title>
+        <meta property="og:title" content="{{ title }} - GreenGoShop">
     {% else %}
         <title>Почетна</title>
+        <meta property="og:title" content="Почетна">
     {% endif %}
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href=" {% static 'shop/css/main_minified.css' %} ">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'icons/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'icons/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'icons/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'icons/site.webmanifest' %}">
     <!-- Meta Pixel Code -->
     <script>
     !function(f,b,e,v,n,t,s)
