--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -89,7 +89,7 @@
                 <input type="hidden" class="offer_price" value="{{ item.price }}">
                 <img src="{{ item.product.thumbnail_loop.url }}" alt="" width="60" height="60" class="cart-item-thumbnail">
                 <span class="sidecart-item-content sidecart-offer-content">
-                    <p class="sidecart-item-name">{{ item.product.title }}</p>
+                    <p class="sidecart-item-name prod_title_tracker">{{ item.product.title }}</p>
                     <p class="sidecart-item-quantity">1 x <span class="red">{{ item.price }} ден</span></p>
                     <p class="sidecartOffer-text">{{ item.offer_text }}</p>
                     
@@ -129,7 +129,7 @@
                 <input type="hidden" class="offer_price" value="{{ item.price }}">
                 <img src="{{ item.product.thumbnail_loop.url }}" alt="" width="60" height="60" class="cart-item-thumbnail">
                 <span class="sidecart-item-content sidecart-offer-content">
-                    <p class="sidecart-item-name">{{ item.product.title }}</p>
+                    <p class="sidecart-item-name prod_title_tracker">{{ item.product.title }}</p>
                     <p class="sidecart-item-quantity">1 x <span class="red">{{ item.price }} ден</span></p>
                     <p class="sidecartOffer-text">{{ item.offer_text }}</p>
                     
