--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -30,7 +30,7 @@
 </div>
 <div class="col-2 product-page product_data">
     
-    <h3 class="product-title product-page prod_title_tracker">{{ product.title }}</h3>
+    <h3 class="product-title product-page prod_title_tracker" id="main-product-title">{{ product.title }}</h3>
     {% if reviews %}
     <div class="rating rating{{ ratingaverage}}">
         <span class="star1"></span>
@@ -43,7 +43,7 @@
     {% endif %}
     <div class="product-page-price main-price">  
         <p class="product-regular-price">{{ product.regular_price }} ден</p>
-        <p class="product-sale-price"><span class="product-price-tracker">{{ product.sale_price }}</span> ден</p>
+        <p class="product-sale-price"><span class="product-price-tracker" id="main-product-price">{{ product.sale_price }}</span> ден</p>
         {% if product.free_shipping == True %}
         <p class="free-shipping">бесплатна достава</p>
         {% endif %}
@@ -88,7 +88,7 @@
     </div>
     {% endif %}
         {% csrf_token %}
-        <input type="hidden" value="{{ product.id }}" class="prod_id">
+        <input type="hidden" value="{{ product.id }}" class="prod_id" id="main-product-id">
         <div class="quantity">
             <button class="decrement-btn">-</button>
             <input type="text" name="quantity" class="qty-input" value="1" aria-label="Количина"> 
