--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -296,5 +296,18 @@
 {% endblock content %}
 {% block scripts %}
 <script src="{%  static 'shop/js/checkout_minified.js' %}"></script>
+<script>
+    $(document).ready(function() {
+    var contentIds = [{% for item in cart %}'{{ item.product.id }}',{% endfor %}];
+    var contentNames = [{% for item in cart %}'{{ item.product.title }}',{% endfor %}];
+    fbq('track', 'InitiateCheckout', {
+        content_ids: contentIds,
+        content_name: contentNames,
+        num_items: '{{cart.count}}',
+        value: '{{cart_total}}',
+        currency: 'USD'
+        });
+    });
+ </script>
 {% endblock scripts %}
  
