--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -303,6 +303,7 @@
     fbq('track', 'InitiateCheckout', {
         content_ids: contentIds,
         content_name: contentNames,
+        content_type: 'product',
         num_items: '{{cart.count}}',
         value: '{{cart_total}}',
         currency: 'USD'
