--- a/shop/static/shop/css/main.css
+++ b/shop/static/shop/css/main.css
@@ -382,6 +382,24 @@ input[type=number] {
     font-weight: 600;
     background-color: white;
     border-radius: 5px;
+    animation: nudge 4s linear infinite;
+}
+@keyframes nudge {
+    
+    0% {
+      transform: rotate(-4deg) scale(1.02);
+    }
+    
+    5% {
+      transform: rotate(4deg) scale(1.04);
+    }
+    
+    10% {
+      transform: rotate(-4deg) scale(1.07);
+    }
+    15%{
+        transform: scale(1);
+    }
 }
 .sidecartOfferBtn{
     padding: 8px!important;
@@ -460,6 +478,7 @@ input[type=number] {
     font-weight: 600!important;
     border-radius: 30px;
 }
+
 .dropdownsearch{
     height:100%;
     display:flex;
@@ -1488,10 +1507,14 @@ select {
     cursor: pointer;
     height: 35px;
     width: 25px;
+    color: var(--black);
 
 }
 .quantity button:hover{
     background-color: gray;
+}
+.quantity button:focus{
+    background-color: white;
 }
 .decrement-btn{
     border-radius: 30px 0px 0px 30px;
@@ -1812,6 +1835,27 @@ select {
     .mobile{
         display: none!important;
     }
+    .product-link{
+        transition: all .2s ease-in-out; 
+    }
+    .product-link:hover{
+        transform: scale(1.05); 
+    }
+   .product-link:hover .product-feed-title{
+        color: var(--green)
+    }
+    .slider-product-link{
+        transform: none!important;
+    }
+    .footer-item a:hover{
+        color: var(--green);
+    }
+    .offerBtn:hover{
+        background-color: var(--black);
+        color: white;
+        border:0;
+    }
+	
 }
 
 @media (max-width: 767px){
